--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,11 @@
     <title>{% block title %}Friendship Diary{% endblock %}</title>
     <meta name="description" content="{% block meta_description %}Default description for the website.{% endblock %}">
     {% block extra_css %}{% endblock %}
+    {% load static %}
+    <!-- Favicon -->
+    <link rel="icon" href="{% static 'images/logo.png' %}" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'images/logo.png' %}" type="image/x-icon">
+
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=JetBrains+Mono:wght@400;500&display=swap');
